# Calc_elastic_2D

./: CMakeLists.txt  include_data.hpp  main.cpp
data/: mesh.inc  mesh_for_calc.inc
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
src/: calc_elastic_2d.cpp  m_matrix.hpp  main.cpp  parser.hpp
src/Renderer/: ShaderProgram.cpp  ShaderProgram.hpp
src/Resources/: ResourceManager.cpp  ResourceManager.hpp
src/data/: example_mesh.inc
